--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.8.2",
+    "react-toastify": "^9.1.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
